Bug 191108 - REGRESSION(r237547): Exception handlers should be aware of wide opcodes
Summary: REGRESSION(r237547): Exception handlers should be aware of wide opcodes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
: 191384 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-31 03:43 PDT by Tadeu Zagallo
Modified: 2018-11-07 14:31 PST (History)
10 users (show)

See Also:


Attachments
Patch (8.74 KB, patch)
2018-10-31 03:48 PDT, Tadeu Zagallo
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2018-10-31 03:43:40 PDT
...
Comment 1 Tadeu Zagallo 2018-10-31 03:48:37 PDT
Created attachment 353481 [details]
Patch
Comment 2 WebKit Commit Bot 2018-10-31 09:39:13 PDT
Comment on attachment 353481 [details]
Patch

Clearing flags on attachment: 353481

Committed r237641: <https://trac.webkit.org/changeset/237641>
Comment 3 WebKit Commit Bot 2018-10-31 09:39:15 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Radar WebKit Bug Importer 2018-10-31 09:40:47 PDT
<rdar://problem/45702183>
Comment 5 Alexey Proskuryakov 2018-11-07 14:31:18 PST
*** Bug 191384 has been marked as a duplicate of this bug. ***