REGRESSION(r237547): Exception handlers should be aware of wide opcodes https://bugs.webkit.org/show_bug.cgi?id=191108 <rdar://problem/45690700>

Reviewed by Saam Barati.

JSTests:

* stress/wide-op_catch.js: Added.
(catch):

Source/JavaScriptCore:

When linking the handler, we need to check whether the target op_catch is
wide or narrow in order to chose the right code pointer for the handler.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::finishCreation):


Canonical link: https://commits.webkit.org/205924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237641 268f45cc-cd09-0410-ab3c-d52691b4dbfc